--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DOMAIN=www.example.com
 REACT_APP_ABOUT=$DOMAIN/about
 REACT_APP_CONTACTS=$DOMAIN/contacts
+WELCOME_PUBLIC='welcome'
 
 
 POSTGRES_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
