--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ REACT_APP_CONTACTS=$DOMAIN/contacts
 WELCOME_PUBLIC='welcome'
 
 
-POSTGRES_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+# POSTGRES_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_PRISMA_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
 POSTGRES_URL_NO_SSL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb"
 POSTGRES_URL_NON_POOLING="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
@@ -12,3 +12,10 @@ POSTGRES_USER="default"
 POSTGRES_HOST="ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="RJBT8spimOl1"
 POSTGRES_DATABASE="verceldb"
+
+# Do not expose your Neon credentials to the browser
+
+PGHOST='ep-dry-king-a5ks446i.us-east-2.aws.neon.tech'
+PGDATABASE='lab2_DB'
+PGUSER='lab2_DB_owner'
+PGPASSWORD='MmUhgF9dT2JX'
