--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ WELCOME_PUBLIC='welcome'
 
 
 # POSTGRES_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_PRISMA_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
 POSTGRES_URL_NO_SSL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb"
 POSTGRES_URL_NON_POOLING="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
