--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "next": "14.1.4",
+    "next-iron-session": "^4.2.0",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^9.0.1"
