config neontech + fix bags

--- a/.env
+++ b/.env
@@ -3,8 +3,7 @@ REACT_APP_ABOUT=$DOMAIN/about
 REACT_APP_CONTACTS=$DOMAIN/contacts
 WELCOME_PUBLIC='welcome'
 
-
-# POSTGRES_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+#vercel
 POSTGRES_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_PRISMA_URL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
 POSTGRES_URL_NO_SSL="postgres://default:RJBT8spimOl1@ep-rapid-sound-a4lqui60-pooler.us-east-1.aws.neon.tech:5432/verceldb"
@@ -15,8 +14,9 @@ POSTGRES_PASSWORD="RJBT8spimOl1"
 POSTGRES_DATABASE="verceldb"
 
 # Do not expose your Neon credentials to the browser
-
-PGHOST='ep-dry-king-a5ks446i.us-east-2.aws.neon.tech'
-PGDATABASE='lab2_DB'
-PGUSER='lab2_DB_owner'
-PGPASSWORD='MmUhgF9dT2JX'
+#neon.tech
+# POSTGRES_URL="postgresql://lab2_DB_owner:MmUhgF9dT2JX@ep-autumn-pine-a5n60bie.us-east-2.aws.neon.tech/lab2_DB?sslmode=require"
+# PGHOST='ep-autumn-pine-a5n60bie.us-east-2.aws.neon.tech'
+# PGDATABASE='lab2_DB'
+# PGUSER='lab2_DB_owner'
+# PGPASSWORD='MmUhgF9dT2JX'
